Fix traffic light collapsing

--- a/src/components/Desktop/Window/TrafficLights.module.scss
+++ b/src/components/Desktop/Window/TrafficLights.module.scss
@@ -1,5 +1,8 @@
 .container {
-  display: inline-flex;
+  --button-size: 0.8rem;
+
+  display: grid;
+  grid-template-columns: repeat(3, var(--button-size));
   align-items: center;
   gap: 0.45rem;
 
@@ -7,7 +10,7 @@
 
   &.unFocussed .trafficLight {
     --bgcolor: hsla(var(--app-color-dark-hsl), 0.3);
-    --border: none;
+    --border-color: hsla(var(--app-color-dark-hsl), 0.5);
   }
 
   svg {
@@ -20,30 +23,29 @@
 }
 
 .trafficLight {
-  --size: 0.79rem;
-  height: var(--size);
-  width: var(--size);
+  height: var(--button-size);
+  width: var(--button-size);
 
   border-radius: 50%;
 
   background-color: var(--bgcolor);
-  box-shadow: var(--border);
+  box-shadow: 0 0 0 0.5px var(--border-color);
 }
 
 .closeLight {
   composes: trafficLight;
   --bgcolor: #ff5f56;
-  --border: 0 0 0 0.5px #e0443e;
+  --border-color: #e0443e;
 }
 
 .stretchLight {
   composes: trafficLight;
   --bgcolor: #27c93f;
-  --border: 0 0 0 0.5px #1aab29;
+  --border-color: #1aab29;
 }
 
 .minimizeLight {
   composes: trafficLight;
   --bgcolor: #ffbd2e;
-  --border: 0 0 0 0.5px #dea123;
+  --border-color: #dea123;
 }
